src/css/styles.css
@font-face { 
    font-family: noot; 
    src: url(fonts/Noot.otf);
}

@font-face {
    font-family: norwester; 
    src: url(fonts/norwester.otf); 
   
}

footer {
    position: fixed;
    padding: 10px 10px 0px 10px;
    bottom: 0;
    width: 100%;
    height: 25px;
    color: black;
    background: rgb(186, 186, 186);
    font-family: norwester;
}

h1 {
    font-family: noot;
    font-size: 70px; 
}

h3 {
    font-family: norwester; 
    font-size: 23px;
}

